# avionics-embedded-control-sim

./: .gitignore  CMakeLists.txt  README.md  main.c
embedded_core/include/: can_comm.h  circular_buffer.h  fault_manager.h  sensor_monitor.h  system_state.h  uart_comm.h  watchdog.h
embedded_core/src/: can_comm.c  circular_buffer.c  fault_manager.c  sensor_monitor.c  system_state.c  uart_comm.c  watchdog.c
